<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@id/conteiner_LL"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp" >
        <TextView
            android:id="@+id/tv_result"
            android:ellipsize="end"
            android:layout_gravity="bottom|end"
            android:maxLines="1"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:text="@string/numbernull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/conteiner_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_clear"
                android:text="@string/numberac" />

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                android:id="@+id/btn_pol_otr"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="18dp"
                android:text="@string/numberplmn" />

            <com.google.android.material.button.MaterialButton
                android:onClick="onOperationClick"
                style="@style/Gray.Button"
                android:id="@+id/btn_percent"
                android:layout_marginEnd="16dp"
                android:text="@string/numberproc" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_razdelit"
                android:text="@string/numberdiv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_seven"
                android:text="@string/number7" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_eight"
                android:layout_marginHorizontal="16dp"
                android:text="@string/number8" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_nine"
                android:layout_marginEnd="16dp"
                android:text="@string/number9" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_ymnojit"
                android:text="@string/numbermult" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_four"
                android:text="@string/number4" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_five"
                android:layout_marginHorizontal="16dp"
                android:text="@string/number5" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_six"
                android:layout_marginEnd="16dp"
                android:text="@string/number6" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_minus"
                android:text="@string/numbersubtr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_one"
                android:text="@string/number1" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"
                android:id="@+id/btn_two"
                android:text="@string/number2" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_three"
                android:layout_marginEnd="16dp"
                android:text="@string/number3" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:id="@+id/btn_plus"
                android:text="@string/numberadd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:id="@+id/btn_nol"
                android:onClick="onNumberClick"
                android:layout_weight="4"
                android:textAlignment="textStart"
                android:paddingStart="33dp"
                android:text="@string/number0" />

            <com.google.android.material.button.MaterialButton
                style="@style/Dark_Gray.Button"
                android:onClick="onNumberClick"
                android:id="@+id/btn_double"
                android:layout_marginHorizontal="18dp"
                android:text="@string/point" />

            <com.google.android.material.button.MaterialButton
                style="@style/Orange.Button"
                android:id="@+id/btn_ravno"
                android:onClick="onOperationClick"
                android:text="@string/numbereq" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Share"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="16dp"
        android:textSize="20sp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sharetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</androidx.constraintlayout.widget.ConstraintLayout>