<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SecondActivity">
    <LinearLayout
        android:id="@+id/container"
        android:background="@color/gray_blue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp" >

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="10dp"
            android:drawableEnd="@drawable/ic_baseline_format_list_bulleted_24"
            android:backgroundTint="#0000"
            android:layout_width="85dp"
            android:layout_height="80dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="85dp"
            android:layout_height="80dp"
            android:layout_marginStart="73dp"
            android:backgroundTint="#0000"
            android:drawableEnd="@drawable/idkwtf" />

        <com.google.android.material.button.MaterialButton
            android:drawableEnd="@drawable/ic_poiskovic"
            android:layout_marginStart="70dp"
            android:backgroundTint="#0000"
            android:layout_width="85dp"
            android:layout_height="80dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextPolicies"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="33sp"
        android:textColor="@color/gray_blue"
        android:text="@string/policies1"
        app:layout_constraintTop_toBottomOf="@id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/TextPolicies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/Buttons"
        android:layout_width="350dp"
        android:layout_height="300dp" >

        <com.google.android.material.button.MaterialButton
            style="@style/ForButton"
            android:paddingStart="-130dp"
            android:text="@string/policy2" />

        <com.google.android.material.button.MaterialButton
            style="@style/ForButton"
            android:layout_marginVertical="8dp"
            android:text="@string/product_category1" />

        <com.google.android.material.button.MaterialButton
            android:layout_marginVertical="8dp"
            style="@style/ForButton"
            android:paddingStart="-30dp"
            android:text="@string/origin_country1" />

        <com.google.android.material.button.MaterialButton
            style="@style/ForButton"
            android:paddingStart="-150dp"
            android:text="@string/brand1" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextCurrent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Buttons"
        android:textSize="35sp"
        android:textColor="@color/gray_blue"
        android:text="@string/current_policies1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ExitButton"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextCurrent"
        android:textSize="20sp"
        app:cornerRadius="30sp"
        android:backgroundTint="@color/red_Dark"
        android:text="@string/export_as_csv1"
        android:layout_width="250dp"
        android:layout_height="70dp" />

</androidx.constraintlayout.widget.ConstraintLayout>